# tauri-components

./: .cspell.json  .gitignore  .jscpd.json  .markdownlint-cli2.jsonc  .n-cursor.json  .n-rules.json  .oxfmtrc.json  .oxlintrc.json  .trufflehog-exclude  .v8rignore  AGENTS.md  CLAUDE.md  COVERAGE.md  eslint.config.js  hk.pkl  knip.json  package.json
.claude/: launch.json  settings.json
.claude/hooks/: normalize-decisions.sh
.cursor/rules/: n-npm-module.mdc
.cursor/skills/n-doc-files/: SKILL.md
.cursor/skills/n-lint/: SKILL.md
.github/actions/setup-playwright-chromium/: action.yml
.github/workflows/: lint-rust.yml  lint-storybook.yml  lint-style.yml  npm-publish.yml
.n-cursor/: llm-trace.jsonl
npm/: CHANGELOG.md  SPEC.md  package.json  stryker.config.mjs  tsconfig.emit-types.json  vitest.config.mjs  vitest.stryker.config.mjs
npm/.changes/: 260616-1024.md  260616-1031.md  260616-1040.md  260616-1636.md  260619-0827.md  260619-0840.md  260619-1331.md  260622-0700.md  260702-1350.md  260705-2228.md  260715-1457.md  260715-1529.md  260715-1546.md  260716-1400.md  260716-1726.md  260717-2002-2.md  260717-2002.md  260717-2007.md  260720-0812.md  260720-0851.md  260720-1041.md  260720-1322.md  260720-1323.md  260720-1529.md  260720-1626.md  260720-1630.md  260720-1645.md  260720-1658.md  260720-1705.md  260721-1430.md  260721-1449.md  260721-1620.md
npm/.storybook/: empty-vite.config.js  main.js  preview.js
npm/.storybook/docs/: empty-vite.config.md  index.md  main.md  preview.md
npm/.storybook/mocks/: gql-sse.js
npm/docs/: index.md  stryker-vue-macros-ignorer.md  stryker.config.md  vitest.config.md  vitest.stryker.config.md
npm/reports/: coverage-classify.cache.json
npm/src/: index.js
npm/src/components/: AgentDialog.stories.js  AgentDialog.vue  AuditDialog.stories.js  AuditDialog.vue  BaseDialog.stories.js  BaseDialog.vue  DialogActions.stories.js  DialogActions.vue  RequestView.stories.js  RequestView.vue  StatePill.stories.js  StatePill.vue  index.js  status.js
npm/src/core/: acp-agent-presets.js  acp-agent-presets.test.js  acp-agent.js  (+10 more)
npm/types/: index.d.ts
tauri-plugin-agent/: .gitignore  Cargo.toml  README.md  build.rs
tauri-plugin-agent/docs/: build.md
tauri-plugin-agent/permissions/: default.toml
tauri-plugin-agent/src/: commands.rs  journal.rs  lib.rs  mcp_bridge.rs
tauri-plugin-agent/src/acp/: mod.rs
tauri-plugin-agent/src/acp/docs/: mod.md
tauri-plugin-agent/src/docs/: commands.md  journal.md  lib.md  mcp_bridge.md
(+70 files in other folders)
