[package]
name = "tauri-plugin-agent"
version = "0.1.0"
description = "Shared Tauri commands for the @7n/tauri-components agent: per-file request journal + ACP client + domain MCP bridge."
authors = ["nitra"]
license = "MIT"
edition = "2021"
repository = "https://github.com/nitra/tauri-components"
links = "tauri-plugin-agent"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
# ACP client role: spawns codex-acp/claude-agent-acp/cursor `agent acp`/pi-acp as a
# stdio subprocess and drives the initialize -> session/new -> session/prompt lifecycle.
# Versions pinned against the real agentclientprotocol/rust-sdk v1.2.0 tag (verified via
# its workspace Cargo.toml — the crate's own README lags behind the actual API).
agent-client-protocol = "1.3.0"
# Domain MCP bridge: exposes the app's tool catalog to whichever ACP agent is spawned.
agent-client-protocol-rmcp = "2.0.1"
rmcp = { version = "2.2.0", features = ["server", "transport-streamable-http-server", "schemars"] }
# Binds the rmcp `tower::Service` (the domain MCP bridge) to an actual loopback
# TCP listener.
axum = "0.8"
tower = "0.5"
# Needed for our own orchestration (oneshot channels gating session/request_permission
# and MCP tools/call on a webview round-trip) — the agent-client-protocol crate itself
# uses async-process/blocking internally and does not require tokio.
tokio = { version = "1.53", features = ["rt-multi-thread", "macros", "process", "sync"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tokio = { version = "1.53", features = ["rt-multi-thread", "macros", "process", "sync", "time"] }
